increase permgen a bit